fixes z-index of menu

--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -159,6 +159,7 @@ button {
             opacity: 0;
             pointer-events: none;
             padding: 14px 0;
+            z-index: 5;
 
             transition: 0.4s ease;
 
