--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,6 +190,7 @@ button {
   opacity: 0;
   pointer-events: none;
   padding: 14px 0;
+  z-index: 5;
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
 }
